# entscheidungsproblem

./: .gitignore  CHANGELOG.md  README.md  entscheidungsproblem.cabal  flake.nix
app/: Main.hs
src/: Entscheidungsproblem.hs  Tape.hs
src/Machine/: Alternator.hs  Irrational.hs
