cabal-version:       2.4
name:                entscheidungsproblem
version:             0.0.0.0
synopsis:            Turing Machine Simulator
description:         Turing Machine Simulator
homepage:            https://github.com/jul1u5/entscheidungsproblem
bug-reports:         https://github.com/jul1u5/entscheidungsproblem/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Julius Marozas
maintainer:          Julius Marozas <marozas.julius@gmail.com>
copyright:           2021 Julius Marozas
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/jul1u5/entscheidungsproblem.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Entscheidungsproblem

executable entscheidungsproblem
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       entscheidungsproblem
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite entscheidungsproblem-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       entscheidungsproblem
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark entscheidungsproblem-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , entscheidungsproblem
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
